--- a/workshop-fetch/src/index.css
+++ b/workshop-fetch/src/index.css
@@ -1,3 +1,5 @@
-@import 'tailwindcss/dist/base.css';
-@import 'tailwindcss/dist/components.css';
-@import 'tailwindcss/dist/utilities.css';
+@import '../node_modules/tailwindcss/base.css';
+@import '../node_modules/tailwindcss/components.css';
+/* @import 'tailwindcss/dist/components.css'; */
+@import '../node_modules/tailwindcss/utilities.css';
+/* @import 'tailwindcss/dist/utilities.css'; */
