--- a/workshop-lazy-loading/src/index.css
+++ b/workshop-lazy-loading/src/index.css
@@ -1,3 +1,3 @@
-@import 'tailwindcss/dist/base.css';
-@import 'tailwindcss/dist/components.css';
-@import 'tailwindcss/dist/utilities.css';
+@import '../.././workshop-fetch/node_modules/tailwindcss/base.css';
+@import '../.././workshop-fetch/node_modules/tailwindcss/components.css';
+@import '../.././workshop-fetch/node_modules/tailwindcss/utilities.css';
